--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.9.0
       with:
-        dotnet-version: 7.0.100
+        dotnet-version: 8.x.x
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
